Work Completed on 9-24-2018
Work Completed on 9-24-2018 - mainly completed the Add Book form and set up all autocomplete/select2 functionality.

--- a/dev/scss/_wpbooklist-admin-book-form.scss
+++ b/dev/scss/_wpbooklist-admin-book-form.scss
@@ -58,3 +58,15 @@
 .wpbooklist-book-form-inner-container-textarea-fields-row textarea{
     display: block;
 }
+
+.wpbooklist-addbook-select-default{
+    max-width:95%;
+}
+
+.ui-autocomplete {
+    max-height: 400px;
+    max-width:350px;
+   /*  overflow-y: auto;   /* prevent horizontal scrollbar */
+    overflow-x: hidden; /* add padding to account for vertical scrollbar */
+    z-index:1000 !important;
+}
