--- a/dev/scss/_wpbooklist-admin-book-form.scss
+++ b/dev/scss/_wpbooklist-admin-book-form.scss
@@ -8,7 +8,7 @@
     display: block;
 }
 
-#wpbooklist-addbook-select-library-label{
+#wpbooklist-addbook-select-library-label p{
     margin-left: auto;
     margin-right: auto;
     width: 400px;
@@ -21,15 +21,6 @@
 
 .wpbooklist-libraries-dropdown-container{
     text-align:center;
-}
-
-.wpbooklist-icon-image-question{
-    width: 12px;
-    display: inline-block;
-    cursor: pointer;
-    padding-left: 10px;
-    position: relative;
-    right: 10px;
 }
 
 .wpbooklist-book-form-inner-container-multiple-fields-row, .wpbooklist-book-form-inner-container-textarea-fields-row, , .wpbooklist-book-form-inner-container-image-fields-row{
