--- a/dev/scss/_wpbooklist-admin-ui.scss
+++ b/dev/scss/_wpbooklist-admin-ui.scss
@@ -2069,3 +2069,16 @@
 #wpbooklist-flex-container{
     display:flex;
 }
+
+.wpbooklist-icon-image-question, .wpbooklist-icon-image-question-with-link{
+    width: 12px;
+    display: inline-block;
+    cursor: pointer;
+    padding-left: 10px;
+    position: relative;
+    right: 10px;
+}
+
+.wpbooklist-icon-image-question-with-link{
+    right: 3px;
+}
