Work Completed on 9-27-2018
Work Completed on 9-27-2018 on way to Virginia - Lots of refactoring - re-worked CSS to incorporate SCSS pre-processing and strucuture things more logically. Made many various changes - added images instead of calling wpbooklist/gamelist.com, changed class name in admin containers, etc.

--- a/dev/scss/_wpbooklist-admin-book-form.scss
+++ b/dev/scss/_wpbooklist-admin-book-form.scss
@@ -1,3 +1,12 @@
+/**
+ * SCSS - _wpbooklist-admin-book-form.scss - Hold CSS specific to the Book Form for adding and editing books.
+ *
+ * @author   Jake Evans
+ * @category SCSS
+ * @package  Includes/Assets/CSS
+ * @version  6.0.0
+ */
+
 .wpbooklist-book-form-indiv-attribute-container{
     display:inline-block;
     margin:5px;
@@ -76,11 +85,6 @@
     top: 0px;
     max-width: 50px;
     padding-left: 4px;
-}
-
-.wpbooklist-book-form-indiv-attribute-container label{
-    position:relative;
-    right:10px;
 }
 
 .wpbooklist-book-form-inner-container-image-fields .wpbooklist-book-form-indiv-attribute-container{
