--- a/dev/scss/_wpbooklist-admin-select2.scss
+++ b/dev/scss/_wpbooklist-admin-select2.scss
@@ -83,7 +83,7 @@
 
     .select2-dropdown {
         background-color: $purewhite;
-        border: 1px solid $slightly-darker-primary-border;
+        border: 1px solid $input-border-gainsboro;
         box-sizing: border-box;
         display: block;
         position: absolute;
@@ -178,7 +178,7 @@
 
     .select2-container--default .select2-selection--single {
         background-color: $purewhite;
-        border: 1px solid $slightly-darker-primary-border;
+        border: 1px solid $input-border-gainsboro;
         border-radius: 4px
     }
 
@@ -245,7 +245,7 @@
         -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, .07);
         box-shadow: inset 0 1px 2px rgba(0, 0, 0, .07);
         background-color: $purewhite;
-        border: 1px solid $slightly-darker-primary-border;
+        border: 1px solid $input-border-gainsboro;
         cursor: text;
         padding-top:4px;
     }
@@ -279,7 +279,7 @@
 
     .select2-container--default .select2-selection--multiple .select2-selection__choice {
         background-color: #e4e4e4;
-        border: 1px solid $slightly-darker-primary-border;
+        border: 1px solid $input-border-gainsboro;
         cursor: default;
         float: left;
         margin-right: 5px;
@@ -316,7 +316,7 @@
     }
 
     .select2-container--default.select2-container--focus .select2-selection--multiple {
-        border: solid $slightly-darker-primary-border 1px;
+        border: solid $input-border-gainsboro 1px;
         outline: 0;
         padding-top:4px;
     }
@@ -343,7 +343,7 @@
     }
 
     .select2-container--default .select2-search--dropdown .select2-search__field {
-        border: 1px solid $slightly-darker-primary-border
+        border: 1px solid $input-border-gainsboro
     }
 
     .select2-container--default .select2-search--inline .select2-search__field {
@@ -368,7 +368,7 @@
     }
 
     .select2-container--default .select2-results__option[aria-selected=true] {
-        background-color: $slightly-darker-primary-border
+        background-color: $input-border-gainsboro
     }
 
     .select2-container--default .select2-results__option .select2-results__option {
@@ -417,7 +417,7 @@
 
     .select2-container--classic .select2-selection--single {
         background-color: #f7f7f7;
-        border: 1px solid $slightly-darker-primary-border;
+        border: 1px solid $input-border-gainsboro;
         outline: 0;
         background-image: -webkit-linear-gradient(top, $purewhite 50%, #eee 100%);
         background-image: -o-linear-gradient(top, $purewhite 50%, #eee 100%);
@@ -447,9 +447,9 @@
     }
 
     .select2-container--classic .select2-selection--single .select2-selection__arrow {
-        background-color: $slightly-darker-primary-border;
+        background-color: $input-border-gainsboro;
         border: none;
-        border-left: 1px solid $slightly-darker-primary-border;
+        border-left: 1px solid $input-border-gainsboro;
         border-top-right-radius: 4px;
         border-bottom-right-radius: 4px;
         height: 26px;
@@ -483,7 +483,7 @@
 
     .select2-container--classic[dir="rtl"] .select2-selection--single .select2-selection__arrow {
         border: none;
-        border-right: 1px solid $slightly-darker-primary-border;
+        border-right: 1px solid $input-border-gainsboro;
         border-radius: 0;
         border-top-left-radius: 4px;
         border-bottom-left-radius: 4px;
@@ -529,7 +529,7 @@
 
     .select2-container--classic .select2-selection--multiple {
         background-color: $purewhite;
-        border: 1px solid $slightly-darker-primary-border;
+        border: 1px solid $input-border-gainsboro;
         cursor: text;
         outline: 0
     }
@@ -550,7 +550,7 @@
 
     .select2-container--classic .select2-selection--multiple .select2-selection__choice {
         background-color: #e4e4e4;
-        border: 1px solid $slightly-darker-primary-border;
+        border: 1px solid $input-border-gainsboro;
         cursor: default;
         float: left;
         margin-right: 5px;
@@ -601,7 +601,7 @@
     }
 
     .select2-container--classic .select2-search--dropdown .select2-search__field {
-        border: 1px solid $slightly-darker-primary-border;
+        border: 1px solid $input-border-gainsboro;
         outline: 0
     }
 
