--- a/dev/scss/wpbooklist-main-admin.scss
+++ b/dev/scss/wpbooklist-main-admin.scss
@@ -1,3 +1,11 @@
+/**
+ * SCSS - wpbooklist-main-admin.scss - Master Admin backend SCSS file - Holds all Placeholder classes and variable declarations used throughout all the other partial admin SCSS files. 
+ *
+ * @author   Jake Evans
+ * @category SCSS
+ * @package  Includes/Assets/CSS
+ * @version  6.0.0
+ */
 
 /*
  *   BEGIN COLOR VARIABLES
@@ -6,19 +14,148 @@ $primary-color: #F05A1A;
 $primary-color-border: #b11c48;
 $verylight-primary-color: #FAE6EC;
 $slightly-darker-primary: #F8DEE6;
-$slightly-darker-primary-border: #DFC7CF;
+$input-border-gainsboro: #DDDDDD;
 $secondary-yellow: #F8C849;
 $purewhite: #FFFFFF;
 $pureblack: #000000;
 $lightgray: #CCCCCC;
-$white-trans-9:rgba(255, 255, 255, 0.9);
-$primary-box-shadow:2px 2px 5px $pureblack;
-$primary-box-shadow-inset: inset 2px 2px 5px $pureblack;
-$menu-text-shadow: 1px 1px black;
+
 
 /*
  *   END COLOR VARIABLES
 */
+
+
+/*
+ * BEGIN PLACEHOLDER CLASSES
+ */
+%wpbooklist-admin-container-border{
+    border: solid 1px $primary-color;
+}
+
+%wpbooklist-admin-container-box-shadow{
+    box-shadow: 10px 10px 10px $primary-color;
+}
+
+%wpbooklist-margin-auto-centered{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+%wpbooklist-question-icon-label{
+    position:relative;
+    right:10px;
+}
+
+%wpbooklist-response-success-fail-container{
+    text-align:center;
+    margin-top:50px;
+}
+
+%wpbooklist-admin-top-title-icon{
+    width: 30px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+%wpbooklist-admin-container-bottom-border-only{
+    border-top: 0px;
+    border-right: 0px;
+    border-left: 0px;
+    border-bottom: 1px;
+    border-style: solid;
+}
+
+%wpbooklist-admin-advert-visit-me-title{
+    font-variant: small-caps;
+    font-size: 20px;
+    font-style: italic;
+    margin-bottom: 5px;
+    margin-top:20px;
+}
+
+%wpbooklist-admin-advert-site-div{
+    text-align: center;
+    font-variant: small-caps;
+    display: inline-block;
+    width: 50%;
+    margin: 20px;
+}
+
+%wpbooklist-icon-image-question{
+    width: 12px;
+    display: inline-block;
+    cursor: pointer;
+    padding-left: 10px;
+    position: relative;
+    right: 10px;
+}
+
+%wpbooklist-spinner{
+    opacity: 0;
+    height: 20px;
+    width: 20px;
+    margin: 10px auto;
+    -webkit-animation: rotation .6s infinite linear;
+    -moz-animation: rotation .6s infinite linear;
+    -o-animation: rotation .6s infinite linear;
+    animation: rotation .6s infinite linear;
+    border-left: 1px solid $purewhite;
+    border-right: 1px solid $purewhite;
+    border-bottom: 1px solid $purewhite;
+    border-top: 1px solid $primary-color;
+    border-radius: 100%;
+    position: relative;
+}
+
+%wpbooklist-tab-intro-para{
+    @extend %wpbooklist-margin-auto-centered;
+    text-align: center;
+    max-width: 600px;
+}
+
+%wpbooklist-admin-containers{
+    @extend %wpbooklist-admin-container-border;
+    @extend %wpbooklist-admin-container-box-shadow;
+    background-color: $purewhite;
+    padding: 10px;
+    width: 70%;
+    border-radius: 10px;
+    margin: 25px;
+}
+
+%wpbooklist-admin-top-title{
+    @extend %wpbooklist-admin-container-bottom-border-only;
+    width: 100%;
+    font-weight: bold;
+    font-variant: small-caps;
+    font-size: 18px;
+    text-align: center;
+}
+
+%wpbooklist-addition-div-img{
+    width:22px;
+}
+
+%wpbooklist-addition-div-p{
+    margin: 0px;
+    font-size: 10px;
+    position: relative;
+    top: 42px;
+    line-height: 0.9;
+}
+
+
+
+
+
+
+
+
+/*
+ * END PLACEHOLDER CLASSES
+ */
 
 /*
  *  BEGIN IMPORTS
