--- a/dev/scss/_wpbooklist-admin-book-form.scss
+++ b/dev/scss/_wpbooklist-admin-book-form.scss
@@ -65,7 +65,7 @@
     max-height: 400px;
     max-width:350px;
    /*  overflow-y: auto;   /* prevent horizontal scrollbar */
-    overflow-x: hidden; /* add padding to account for vertical scrollbar */
+    overflow-x: hidden; /* add padding to account for vertical scrollbar s*/
     z-index:1000 !important;
 }
 
@@ -94,4 +94,28 @@
 
 .wpbooklist-book-form-inner-container-image-fields-row{
     margin-top:25px;
+}
+
+#wpbooklist-authorize-amazon-container table, #wpbooklist-use-amazon-container table{
+    @extend %wpbooklist-margin-auto-centered;
+    text-align:center;
+    margin-bottom: 50px;
+    margin-top: 30px;
+}
+
+#wpbooklist-authorize-amazon-container label, #wpbooklist-use-amazon-container label{
+    position: relative;
+    right:5px;
+}
+
+#auth-amazon-question-label{
+    margin-bottom:0px;
+}
+
+#wpbooklist-use-amazon-container p{
+    margin-bottom:0px;
+}
+
+#auth-amazon-question-label img{
+    right:2px;
 }
