--- a/dev/scss/_wpbooklist-colorbox.scss
+++ b/dev/scss/_wpbooklist-colorbox.scss
@@ -569,7 +569,7 @@ q:before,  #colorbox q:after {
     position: relative;
 }
 
-#colorbox #wpbooklist-add-book-success-span {
+#colorbox #wpbooklist-success-span {
     font-style: italic;
     color: green;
     font-weight: bold;
