--- a/dev/scss/admincssOLD.css
+++ b/dev/scss/admincssOLD.css
@@ -192,7 +192,7 @@
     opacity:0;
 }
 
-#wpbooklist-add-book-success-span{
+#wpbooklist-success-span{
     font-style:italic;
     color:#F05A1A;
     font-size: 16px;
