Work Completed on 10-4-2018
Work Completed on 10-4-2018 - Completed modifications to the Custom Fields Plugins as it pertains to the 'Add a Book' form/tab. Fixed a couple errant PHP notices.

--- a/dev/scss/wpbooklist-main-admin.scss
+++ b/dev/scss/wpbooklist-main-admin.scss
@@ -162,6 +162,16 @@ $lightgray: #CCCCCC;
     margin-bottom:5px;
 }
 
+%wpbooklist-indiv-entry-style {
+    border: 1px solid #e5e5e5;
+    padding: 10px;
+    margin-bottom: 10px;
+    display: block;
+    position: relative;
+    min-height: 100px;
+    width: 97%;
+}
+
 
 
 
