--- a/dev/scss/wpbooklist-main-admin.scss
+++ b/dev/scss/wpbooklist-main-admin.scss
@@ -172,7 +172,19 @@ $lightgray: #CCCCCC;
     width: 97%;
 }
 
+%wpbooklist-indiv-row-container-div{
+    margin-bottom: 20px;
+    border: 1px solid #e5e5e5;
+    padding: 10px;
+    display: block;
+    position: relative;
+    min-height: 50px;
+    width: 97%;
+}
 
+%wpbooklist-buttons-bottom-drop-shadow{
+    box-shadow: inset 0 -3px 0 rgba(0,0,0,.1);
+}
 
 
 
@@ -188,6 +200,7 @@ $lightgray: #CCCCCC;
 */
 @import '_wpbooklist-admin-ui.scss';
 @import '_wpbooklist-admin-book-form.scss';
+@import '_wpbooklist-admin-edit-book-tab.scss';
 @import '_wpbooklist-admin-select2.scss';
 @import '_wpbooklist-colorbox.scss';
 
