Work Completed on 10-10-18
Finished up the Book Editing functionality, began work on re-doing the Library and Book View Display Options - now two seperate tabs. Need to build in code for adding custom fields.

--- a/dev/scss/_wpbooklist-admin-ui.scss
+++ b/dev/scss/_wpbooklist-admin-ui.scss
@@ -81,6 +81,14 @@
     padding: 2px 0 0!important;
 }
 
+.wpbooklist-my-notice-dismiss-forever{
+    @extend %wpbooklist-default-buttons-style;
+}
+
+.wpbooklist-my-notice-dismiss-forever:hover {
+    @extend %wpbooklist-default-buttons-style-hover;
+}
+
 /*
  * END ADMIN CONTAINER BONES, ADVERTISMENT, AND DASHBOARD ICON CSS
  */
