--- a/dev/scss/_wpbooklist-admin-edit-book-tab.scss
+++ b/dev/scss/_wpbooklist-admin-edit-book-tab.scss
@@ -114,16 +114,16 @@
     margin-top: 0px;
 }
 
-.wpbooklist-edit-actions-div div {
+.wpbooklist-edit-actions-delete-button, .wpbooklist-edit-actions-edit-button {
+   @extend %wpbooklist-default-buttons-style;
+   display: block!important;
+}
+
+.wpbooklist-edit-book-delete-page-post-div {
     margin: 5px;
-    background-color: #F05A1A;
     padding: 7px;
     padding-left: 10px;
-    margin: 5px;
-    border-radius: 5px;
-    color: white;
     position: relative;
-    cursor: pointer;
 }
 
 .wpbooklist-edit-actions-div .wpbooklist-edit-actions-edit-button {
@@ -131,11 +131,11 @@
 }
 
 .wpbooklist-edit-actions-div .wpbooklist-edit-actions-edit-button, .wpbooklist-edit-actions-div .wpbooklist-edit-actions-delete-button {
-    @extend %wpbooklist-buttons-bottom-drop-shadow;
+    @extend %wpbooklist-default-buttons-style;
 }
 
-.wpbooklist-edit-actions-div .wpbooklist-edit-actions-edit-button:hover, .wpbooklist-edit-actions-div .wpbooklist-edit-actions-delete-button:hover {
-    box-shadow: none;
+#wpbooklist-edit_books-pagination-div div:hover, .wpbooklist-edit-actions-div .wpbooklist-edit-actions-edit-button:hover, .wpbooklist-edit-actions-div .wpbooklist-edit-actions-delete-button:hover {
+    @extend %wpbooklist-default-buttons-style-hover;
 }
 
 .wpbooklist-edit-book-icon-button {
@@ -207,4 +207,40 @@
 #wpbooklist-cancel-reorder-button{
     margin-top:15px;
     position: relative;
+}
+
+#wpbooklist-edit_books-pagination-div div {
+    @extend %wpbooklist-default-buttons-style;
+    display: inline-block;
+    background-color: $primary-color;
+    cursor: pointer;
+    padding-bottom: 10px;
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-top: 0px;
+    border-radius: 5px;
+    color: white;
+    text-align: center;
+    vertical-align: top;
+    width: 180px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.wpbooklist-edit-book-icon-back, .wpbooklist-edit-book-icon-next {
+    width: 20px;
+    position: relative;
+    top: 6px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.wpbooklist-edit-book-icon-back {
+    -ms-transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+}
+
+#wpbooklist-edit-next-100 {
+    float: right;
 }
