Work Completed on 10-11-2018
Work Completed on 10-11-2018 - Finished up form HMTL for the Library and Book View Display Options tabs. Added code in the Custom Fields Extension to add Hide options in the default options table and any dynamically created options tables.  Created function to populate what fields are hidden in on the Library View Display Options table. Next begin work on saving Library View Display Options in the wpbooklistSaveLibraryViewDisplayOptions() JS function.

--- a/dev/scss/_wpbooklist-admin-display-options.scss
+++ b/dev/scss/_wpbooklist-admin-display-options.scss
@@ -19,6 +19,8 @@
 .wpbooklist-display-options-indiv-entry{
     text-align: left;
     margin: 10px;
+    opacity: 0.4;
+    pointer-events: none;
 }
 
 .wpbooklist-margin-right-td{
@@ -52,4 +54,14 @@
     margin-left: auto;
     margin-right: auto;
     text-align: left;
+}
+
+#wpbooklist-display-opt-check-div{
+    margin:50px;
+    margin-bottom:20px;
+}
+
+.wpbooklist-admin-save-library-display-button{
+    margin:50px;
+    margin-top:20px;
 }
