Additional Work Completed on 10-11-2018
Additional Work Completed on 10-11-2018 - Finished up all functionality for the 'Library View Display Options' Tab. Need to next copy functions and modify for the  'Book View Display Options' Tab.

--- a/dev/scss/_wpbooklist-admin-display-options.scss
+++ b/dev/scss/_wpbooklist-admin-display-options.scss
@@ -23,6 +23,11 @@
     pointer-events: none;
 }
 
+#wpbooklist-display-opt-check-div, #wpbooklist-library-options-lower-table, .wpbooklist-admin-save-library-display-button{
+   opacity: 0.4;
+   pointer-events: none; 
+}
+
 .wpbooklist-margin-right-td{
     display: block;
     margin-top: 5px;
