Work Completed on 10-12-2018
Work Completed on 10-12-2018 - Finished work on the 'Book View Tab' Functionality, aside from adding in considerations for any Custom Fields.

--- a/dev/scss/_wpbooklist-admin-display-options.scss
+++ b/dev/scss/_wpbooklist-admin-display-options.scss
@@ -66,7 +66,7 @@
     margin-bottom:20px;
 }
 
-.wpbooklist-admin-save-library-display-button{
+.wpbooklist-admin-save-library-display-button, .wpbooklist-admin-save-book-display-button{
     margin:50px;
     margin-top:20px;
 }
