Work Completed on 10-16-2018
Work Completed on 10-16-2018 - Completed Issue #14 and then worked on Issue #15 - Completed the 'Add a Book' Page/Post functionality. Next need to ensure that the Editing functionality for Pages and Posts is complete - specifically, add a new option dynamically into the 'Create a Page' and 'Create  a Post' drop-downs called 'Already Created' if a Page or Post already exists. If it doesn't already exist, create the page and/or Post upon Editing the book, if the user has choosen 'Yes' in the drop-down.

--- a/dev/scss/_wpbooklist-admin-display-options.scss
+++ b/dev/scss/_wpbooklist-admin-display-options.scss
@@ -66,7 +66,7 @@
     margin-bottom:20px;
 }
 
-.wpbooklist-admin-save-library-display-button, .wpbooklist-admin-save-book-display-button{
+.wpbooklist-admin-save-library-display-button, .wpbooklist-admin-save-book-display-button, .wpbooklist-admin-save-post-display-button, .wpbooklist-admin-save-page-display-button{
     margin:50px;
     margin-top:20px;
 }
