--- a/dev/scss/_wpbooklist-admin-edit-book-tab.scss
+++ b/dev/scss/_wpbooklist-admin-edit-book-tab.scss
@@ -13,6 +13,8 @@
 
 #wpbooklist-edit-books-lib-search-div{
     text-align: center;
+    position: relative;
+    margin-bottom:100px;
 }
 
 #wpbooklist-edit-books-lib-div, #wpbooklist-edit-books-search-div {
@@ -23,7 +25,7 @@
 
 #wpbooklist-spinner-edit-change-lib {
     position: absolute;
-    top: 100px;
+    top: 138px;
     left: 0;
     right: 0;
 }
