Work completed on 10-23-18
Work completed on 10-23-18 - Issue #1 in StoreFront Repo - Hid the form elements and created js function to reveal/hide those fields. Checked submission on js side before ajax call is made - all values good. See what values become in ajax callback. Also completed some WPCS Compliance work in Colorbox file.

--- a/dev/scss/_wpbooklist-admin-book-form.scss
+++ b/dev/scss/_wpbooklist-admin-book-form.scss
@@ -13,7 +13,7 @@
     vertical-align:top;
 }
 
-.wpbooklist-book-form-container input[type="text"], .wpbooklist-book-form-indiv-attribute-container select{
+.wpbooklist-book-form-container input[type="text"], .wpbooklist-book-form-container input[type="date"], .wpbooklist-book-form-container input[type="number"], .wpbooklist-book-form-indiv-attribute-container select{
     width: 175px;
     display: block;
 }
