Work Completed on 11-01-2018
Created the 'Add a User' Tab - the full form to include Translations.

--- a/dev/scss/_wpbooklist-admin-book-form.scss
+++ b/dev/scss/_wpbooklist-admin-book-form.scss
@@ -38,7 +38,7 @@
     width:100%;
 }
 
-.wpbooklist-book-form-inner-container-basic-fields, .wpbooklist-book-form-inner-container-multiple-fields, .wpbooklist-book-form-inner-container-textarea-fields, .wpbooklist-book-form-inner-container-image-fields, .wpbooklist-book-form-inner-container-textarea-fields, .wpbooklist-book-form-inner-container-dropdown-fields{
+.wpbooklist-book-form-inner-container-basic-fields, .wpbooklist-book-form-inner-container-multiple-fields, .wpbooklist-book-form-inner-container-textarea-fields, .wpbooklist-book-form-inner-container-image-fields, .wpbooklist-book-form-inner-container-textarea-fields, .wpbooklist-book-form-inner-container-dropdown-fields, .wpbooklist-user-form-inner-container-auth-fields{
     text-align:center;
 }
 
