--- a/dev/scss/_wpbooklist-colorbox.scss
+++ b/dev/scss/_wpbooklist-colorbox.scss
@@ -560,7 +560,7 @@ q:before,  #colorbox q:after {
     height: 20px;
     width: 20px;
     margin: 10px auto;
-    animation: 0.5s rotate360 infinite linear; ;
+    animation: 0.5s rotate360 infinite linear;
     border-left: 1px solid white;
     border-right: 1px solid white;
     border-bottom: 1px solid white;
