Additional Work Completed on 11-12-2018
Work Completed in support of the WPBookList Storefront Issue #4

--- a/dev/scss/_wpbooklist-admin-users-form.scss
+++ b/dev/scss/_wpbooklist-admin-users-form.scss
@@ -21,7 +21,7 @@
     margin-top: 100px;
 }
 
-.wpbooklist-user-form-inner-container-auth-fields .wpbooklist-book-form-indiv-attribute-container-exception{
+.wpbooklist-user-form-inner-container-auth-fields .wpbooklist-book-form-indiv-attribute-container-exception, .wpbooklist-display-options-indiv-entry-exception{
     display:block;
 }
 
