Work Completed Over Several Days
Work Completed Over Several Days - Completed Issue #40, Issue #43, Issue #44, Issue #45

--- a/dev/scss/_wpbooklist-admin-edit-book-tab.scss
+++ b/dev/scss/_wpbooklist-admin-edit-book-tab.scss
@@ -116,7 +116,7 @@
     margin-top: 0px;
 }
 
-.wpbooklist-edit-actions-delete-button, .wpbooklist-edit-actions-edit-button {
+.wpbooklist-edit-actions-delete-button, .wpbooklist-edit-actions-edit-button, .wpbooklist-edituser-actions-delete-button, .wpbooklist-edituser-actions-edit-button {
    @extend %wpbooklist-default-buttons-style;
    display: block!important;
 }
