Work completed on 12-4-2018
Work completed on 12-4-2018  -completed Issue #48

--- a/dev/scss/_wpbooklist-frontend-ui.scss
+++ b/dev/scss/_wpbooklist-frontend-ui.scss
@@ -369,6 +369,14 @@ q:before, .wpbooklist-top-container q:after {
     max-width:60px;
 }
 
+#wpbooklist_main_display_div .wpbooklist-storytime-shocked-img-front{
+    width: 30px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+}
+
 
 
 
