--- a/dev/scss/_wpbooklist-frontend-ui.scss
+++ b/dev/scss/_wpbooklist-frontend-ui.scss
@@ -302,6 +302,7 @@ q:before, .wpbooklist-top-container q:after {
 .wpbooklist-pagination-div .wpbooklist-pagination-div-inner .wpbooklist-pagination-middle-div{
     margin-left:20px;
     margin-right:20px;
+    min-width:100px;
 }
 
 .wpbooklist-pagination-left-div .wpbooklist-pagination-prev-img{
