Work Completed on 12-7-2018
Completed Issue #52, Issue #53. Worked on Issue #1 in the wpbooklist-customfields repo.

--- a/dev/scss/_wpbooklist-colorbox.scss
+++ b/dev/scss/_wpbooklist-colorbox.scss
@@ -611,3 +611,9 @@ q:before,  #colorbox q:after {
 #cboxClose, #cboxBottomLeft, #cboxBottomCenter, #cboxBottomRight, #cboxTopLeft, #cboxTopCenter, #cboxTopRight, #cboxMiddleLeft, #cboxMiddleRight{
     display:none;
 }
+
+#colorbox #wpbooklist-additional-images-id img{
+    max-width: 200px;
+    vertical-align: top;
+    margin: 10px;
+}
