Work Completed on 12-10-2018
Work Completed on 12-10-2018 - Completed Issue #57

--- a/dev/scss/_wpbooklist-admin-ext-style-temp-adverts.scss
+++ b/dev/scss/_wpbooklist-admin-ext-style-temp-adverts.scss
@@ -88,6 +88,10 @@
     background-color: #C89F2F;
 }
 
+#wpbooklist-extension-page-ext-div-15 {
+    background-color: $storytimeblue;
+}
+
 .wpbooklist-extension-img-bundle-mult {
     width: 30px;
     margin-left: 5px;
