Work Completed on 12-12-2018
Work Completed on 12-12-2018 - Work completed in support of developing WPBookList Search - mainly Translation tweaks and one CSS mod.

--- a/dev/scss/_wpbooklist-frontend-ui.scss
+++ b/dev/scss/_wpbooklist-frontend-ui.scss
@@ -303,6 +303,7 @@ q:before, .wpbooklist-top-container q:after {
     margin-left:20px;
     margin-right:20px;
     min-width:100px;
+    text-align:center;
 }
 
 .wpbooklist-pagination-left-div .wpbooklist-pagination-prev-img{
