--- a/dev/scss/_wpbooklist-admin-ext-style-temp-adverts.scss
+++ b/dev/scss/_wpbooklist-admin-ext-style-temp-adverts.scss
@@ -215,3 +215,70 @@
     top: 8px;
     font-size: 25px;
 }
+
+
+
+
+.wpbooklist-mini-ultimate-advert .wpbooklist-extensions-purchase-button-link a {
+    position:relative;
+    background-color: #4F97CE;
+    width: 185px;
+    padding: 10px;
+    border-radius: 5px;
+    color: white;
+    font-size: 15px;
+    text-decoration: none;
+    margin-top: 22px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 1.5;
+    bottom:0px;
+    @extend %wpbooklist-button-and-link-box-shadow;
+}
+
+.wpbooklist-mini-ultimate-advert .wpbooklist-extensions-purchase-button-link a:hover {
+    box-shadow:none;
+}
+
+.wpbooklist-mini-ultimate-advert #span_1_of_1_featured {
+    background: #F3F3F3;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 1px solid #E7E8E7;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
+    padding-bottom: 20px;
+    box-shadow: none;
+    border-radius: 2px;
+    margin-top: 10px;
+}
+
+.wpbooklist-mini-ultimate-advert #wpbooklist-featured-bundle-img-text-div{
+    text-align: center;
+    display: block;
+}
+
+.wpbooklist-mini-ultimate-advert .wpbooklist-featured-icon-img {
+    width: 25px;
+    position: relative;
+    top: 8px;
+    margin-right: 5px;
+    margin-left: 30px;
+}
+
+
+@media screen and ( max-width: 767px ) {
+    .wpbooklist-mini-ultimate-advert .wpbooklist-featured-icon-img {
+        display: block;
+        width: 25px;
+        position: relative;
+        top: 8px;
+        margin-right: auto;
+        margin-left: auto;
+        margin-bottom: 10px;
+        margin-top: 20px;
+    }
+}
