--- a/dev/scss/wpbooklist-main-frontend.scss
+++ b/dev/scss/wpbooklist-main-frontend.scss
@@ -3,6 +3,7 @@
 */
 
 @import '_wpbooklist-frontend-ui.scss';
+@import '_wpbooklist-frontend-list-ui.scss';
 @import '_wpbooklist-frontend-storytime.scss';
 @import '_wpbooklist-colorbox.scss';
 
